ArgoCD/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
      sectionName: web-gw
  hostnames:
    - argocd.huntrrose.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: argocd-server
        namespace: argocd
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-cli
  namespace: argocd
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
      sectionName: https-gw
  hostnames:
    - argocd.huntrrose.local
  rules:
  - backendRefs:
      - name: argocd-server
        namespace: argocd
        port: 443
